feat: set GaiaStrictCoordinateExtractor